hero section alignment fixed

--- a/portfoliomern/src/App.css
+++ b/portfoliomern/src/App.css
@@ -1,3 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gloock&display=swap');
 
+.outer-container{
+    margin-bottom: 2rem;
+}
